+ Added support for Windows 7 Taskbar Extensions (namely, Progress Bars). * Cleanup is done in a separate thread now, so progress bar runs more smooth. * "Tabified" About dialog. Added GPL License and Credits. * Updated translations and tspsg.tag file.

--- a/resources/common.qrc
+++ b/resources/common.qrc
@@ -17,4 +17,7 @@
         <file>icons/qtlogo-64.png</file>
         <file>icons/roll.png</file>
     </qresource>
+    <qresource prefix="/files">
+        <file>COPYING</file>
+    </qresource>
 </RCC>
