+ TSPSG now uses DejaVu LGC Sans Mono as the default font and comes with it "embedded" in the executable. * Updated tspsg.tag file.

--- a/resources/common.qrc
+++ b/resources/common.qrc
@@ -19,5 +19,6 @@
     </qresource>
     <qresource prefix="/files">
         <file>COPYING</file>
+        <file>DejaVuLGCSansMono.ttf</file>
     </qresource>
 </RCC>
