+ Added more fonts to font-family css property on export. - Graph was slightly cut on export.

--- a/resources/desktop.qrc
+++ b/resources/desktop.qrc
@@ -23,6 +23,7 @@
         <file>icons/128x128/preferences-desktop-locale.png</file>
         <file>icons/128x128/preferences-desktop-theme.png</file>
         <file>icons/128x128/preferences-system.png</file>
+        <file>icons/128x128/qtlogo.png</file>
         <file>icons/128x128/roll.png</file>
         <file>icons/128x128/system-software-update.png</file>
     </qresource>
