--- a/resources/desktop.qrc
+++ b/resources/desktop.qrc
@@ -4,6 +4,7 @@
         <file>icons/l10n/flag-ru.png</file>
         <file>icons/l10n/flag-ua.png</file>
         <file>icons/128x128/application-exit.png</file>
+        <file>icons/128x128/applications-internet.png</file>
         <file>icons/128x128/configure-toolbars.png</file>
         <file>icons/128x128/dialog-cancel.png</file>
         <file>icons/128x128/dialog-ok.png</file>
@@ -23,6 +24,7 @@
         <file>icons/128x128/preferences-desktop-locale.png</file>
         <file>icons/128x128/preferences-desktop-theme.png</file>
         <file>icons/128x128/preferences-system.png</file>
+        <file>icons/128x128/tools-report-bug.png</file>
         <file>icons/128x128/qtlogo.png</file>
         <file>icons/128x128/roll.png</file>
         <file>icons/128x128/system-software-update.png</file>
