* Made some small corrections to different texts. * FIX: Icons in toolbar configuration dialog didn't follow style and one of them wasn't shown.

--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -388,7 +388,7 @@
              <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="statusTip">
-             <string>Use data URI scheme to save solution graph in HTML (not supported by IE 7 and lower)</string>
+             <string>Save solution graph inside HTML using data URI scheme (not supported by IE 7 and lower)</string>
             </property>
             <property name="text">
              <string>Embed solution graph into HTML</string>
