--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author>Lёppa: $Id$</author>
+ <author>Lёppa: $Id: $Format:%h %ai %an$ $</author>
  <class>SettingsDialog</class>
  <widget class="QDialog" name="SettingsDialog">
   <property name="windowTitle">
