DejaVuLGCSansMono.ttf doesn't contain bold version.
Because of this, at least in Kubuntu 12.04, no bold characters where
produced in the solution output even if text was marked to be bold.
Added also bold version of this font (DejaVuLGCSansMono-Bold.ttf) to
built-in resources.

Additionally, updated DejaVuLGCSansMono.ttf to the latest version.

--- a/resources/common.qrc
+++ b/resources/common.qrc
@@ -4,6 +4,7 @@
     </qresource>
     <qresource prefix="/files">
         <file>COPYING</file>
-        <file>DejaVuLGCSansMono.ttf</file>
+        <file>fonts/DejaVuLGCSansMono.ttf</file>
+        <file>fonts/DejaVuLGCSansMono-Bold.ttf</file>
     </qresource>
 </RCC>
