Some small UI fixes:
- Added word wrap to font name in Settings Dialog so it doesn't stretch it
  too much in case its name is too long.
- Help button in Settings Dialog on Symbian wasn't aligned left.

--- a/ui/settingsdialog.ui
+++ b/ui/settingsdialog.ui
@@ -544,6 +544,9 @@
                 <property name="statusTip">
                  <string>Font used for solution output</string>
                 </property>
+                <property name="wordWrap">
+                 <bool>true</bool>
+                </property>
                </widget>
               </item>
               <item>
